--- a/.github/workflows/python-testing.yml
+++ b/.github/workflows/python-testing.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install Dependencies
-        run: pip install pytest pytest-md pytest-emoji
+        run: pip install -r requirements.txt
 
       - uses: pavelzw/pytest-action@v2.2.0
         with:
