changed name to reflect it only works when pushing

--- a/.github/workflows/python-codestyle.yml
+++ b/.github/workflows/python-codestyle.yml
@@ -1,4 +1,4 @@
-name: Add Python code style comments to PR
+name: Check Python codestyle when pushing
 
 on: push
 
@@ -18,7 +18,5 @@ jobs:
       - name: wemake-python-styleguide
         uses: wemake-services/wemake-python-styleguide@0.19.2
         continue-on-error: true
-#        with:
-#          reporter: 'github-pr-review'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
