--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -8,6 +8,9 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
+  "engines": {
+    "npm": "^10.5.0"
+  },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
     "@vee-validate/zod": "^4.12.6",
