--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -23,12 +23,14 @@
     "radix-vue": "^1.7.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.164.1",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
     "vue-sonner": "^1.1.2",
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/three": "^0.164.0",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
