the host server and the storage server are assumed to be one and the same

--- a/config/backend.yml
+++ b/config/backend.yml
@@ -1,7 +1,2 @@
-storage-server:
-  user: ROOT
-  ip: 194.180.188.105
-  path: "/tmp"
-
-backend:
-  temp-folder: "xrf_explorer/server/temp"
+uploads-folder: "xrf_explorer/server/temp"
+upload-buffer-size: 16384
