--- a/tests/resources/configs/upload-file-server-backend.yml
+++ b/tests/resources/configs/upload-file-server-backend.yml
@@ -1,7 +1,2 @@
-storage-server:
-  user: "user"
-  ip: 0.0.0.0
-  path: "/target"
-
-backend:
-  temp-folder: "/temp"
+uploads-folder: "tests/temp"
+upload-buffer-size: 16384
