--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ env/
 
 # Generated client, should only be updated when publishing development to main
 xrf_explorer/client/dist/
+xrf_explorer/client/docs/
 
 # Data files
 **/*.tif
