--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "style:check": "prettier . --check",
+    "style:fix": "prettier . --fix"
   },
   "engines": {
     "npm": "^10.5.0"
