--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -8,7 +8,7 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "style:check": "prettier . --check",
-    "style:fix": "prettier . --fix"
+    "style:fix": "prettier . --write"
   },
   "engines": {
     "npm": "^10.5.0"
