--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "style:check": "prettier . --check",
-    "style:fix": "prettier . --write"
+    "style:check": "eslint .",
+    "style:fix": "eslint . --fix"
   },
   "engines": {
     "npm": "^10.5.0"
@@ -32,13 +32,21 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vue-eslint-parser": "^9.4.2",
     "vue-tsc": "^2.0.6"
   }
 }
