Fixed some small mistakes in the workflow

--- a/.github/workflows/client-lint.yml
+++ b/.github/workflows/client-lint.yml
@@ -11,11 +11,10 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          directory: ./xrf_explorer/client
           cache-dependency-path: ./xrf_explorer/client/package-lock.json
       - name: Setup
         working-directory: ./xrf_explorer/client
         run: npm ci
       - name: Check code
         working-directory: ./xrf_explorer/client
-        run: npm style:check
+        run: npm run style:check
