Testing eslint config that results in no errors to test the CI workflow

--- a/xrf_explorer/client/.eslintrc
+++ b/xrf_explorer/client/.eslintrc
@@ -29,13 +29,13 @@
       },
     ],
     "vue/require-prop-comment": [
-      "error",
+      "off",
       {
         "type": "JSDoc",
       },
     ],
     "jsdoc/require-jsdoc": [
-      "error",
+      "off",
       {
         "publicOnly": {
           "esm": true,
