Reenabled eslint rules for documentation now that the workflow has been verified, modified the workflow to only run on pull requests.

--- a/xrf_explorer/client/.eslintrc
+++ b/xrf_explorer/client/.eslintrc
@@ -29,13 +29,13 @@
       },
     ],
     "vue/require-prop-comment": [
-      "off",
+      "error",
       {
         "type": "JSDoc",
       },
     ],
     "jsdoc/require-jsdoc": [
-      "off",
+      "error",
       {
         "publicOnly": {
           "esm": true,
