--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -41,6 +41,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsdoc": "^48.2.4",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-vue": "^9.26.0",
     "jsdoc": "^4.0.3",
     "postcss": "^8.4.38",
