--- a/xrf_explorer/client/.eslintrc
+++ b/xrf_explorer/client/.eslintrc
@@ -20,7 +20,7 @@
     "vue/multi-word-component-names": "off",
     "vue/require-default-prop": "off",
     "vue/script-setup-uses-vars": "error",
-    "vue/no-v-for-template-key-on-child": "off",
+    "vue/no-v-for-template-key-on-child": "warn",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
@@ -54,5 +54,12 @@
         "contexts": ["TSInterfaceDeclaration", "TSTypeAliasDeclaration", "TSEnumDeclaration", "TSPropertySignature"],
       },
     ],
+    "jsdoc/require-description": "warn",
+    "jsdoc/require-description-complete-sentence": "warn",
+    "jsdoc/no-bad-blocks": "warn",
+    "jsdoc/no-blank-blocks": "warn",
+    "jsdoc/check-indentation": "warn",
+    "jsdoc/check-line-alignment": "warn",
+    "jsdoc/require-asterisk-prefix": "warn"
   },
 }
