--- a/xrf_explorer/client/.prettierrc
+++ b/xrf_explorer/client/.prettierrc
@@ -11,7 +11,7 @@
   "proseWrap": "always",
   "htmlWhitespaceSensitivity": "css",
   "vueIndentScriptAndStyle": false,
-  "endOfLine": "lf",
+  "endOfLine": "auto",
   "embeddedLanguageFormatting": "auto",
   "singleAttributePerLine": false
 }
