--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -33,6 +33,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^2.1.0",
     "@types/node": "^20.12.7",
     "@types/three": "^0.164.0",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
