Updated eslint to enforce max line size and prettier to wrap classnames.

--- a/xrf_explorer/client/.eslintrc
+++ b/xrf_explorer/client/.eslintrc
@@ -14,7 +14,7 @@
   ],
   "plugins": ["@typescript-eslint", "prettier", "jsdoc", "@stylistic"],
   "rules": {
-    "prettier/prettier": "warn",
+    "prettier/prettier": ["warn"],
     "vue/no-reserved-props": "off",
     "vue/no-v-model-argument": "off",
     "vue/multi-word-component-names": "off",
