--- a/xrf_explorer/client/.prettierrc
+++ b/xrf_explorer/client/.prettierrc
@@ -1,4 +1,7 @@
 {
+  "plugins": ["prettier-plugin-classnames"],
+  "endingPosition": "absolute-with-indent",
+  "customFunctions": ["cva"],
   "printWidth": 120,
   "tabWidth": 2,
   "useTabs": false,
