--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -50,6 +50,7 @@
     "jsdoc": "^4.0.3",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "prettier-plugin-classnames": "^0.6.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
