--- a/.github/workflows/client-lint.yml
+++ b/.github/workflows/client-lint.yml
@@ -1,10 +1,10 @@
 name: Execute ESLint
 
-on: [pull_request, push]
+on: [push]
 
 jobs:
   eslint:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
