--- a/.github/workflows/python-codestyle.yml
+++ b/.github/workflows/python-codestyle.yml
@@ -1,10 +1,10 @@
 name: Check Python codestyle when pushing
 
-on: push
+on: [push]
 
 jobs:
   code_check:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Check out Repository
