--- a/config/backend.yml
+++ b/config/backend.yml
@@ -1,7 +1,8 @@
 uploads-folder: "xrf_explorer/server/temp"
 upload-buffer-size: 16384
 temp-folder: "xrf_explorer/server/temp"
-default_dim_reduction:
+dim-reduction:
+  folder: "dim_reduction"
   threshold: 100
   n_neighbors: 10
   min_dist: 0
