Add step to client ci to check if the code actually builds

--- a/.github/workflows/client-lint.yml
+++ b/.github/workflows/client-lint.yml
@@ -18,3 +18,6 @@ jobs:
       - name: Check code
         working-directory: ./xrf_explorer/client
         run: npx eslint . --max-warnings 1
+      - name: Build code
+        working-directory: ./xrf_explorer/client
+        run: npm run build
