--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+numpy==1.26.4
 packaging==24.0
 pluggy==1.5.0
 Pygments==2.17.2
