generate_embedding more arguments and not single dict

--- a/tests/resources/configs/dim-reduction.yml
+++ b/tests/resources/configs/dim-reduction.yml
@@ -2,8 +2,8 @@ uploads-folder: "tests/resources/dim_reduction"
 temp-folder: "tests/resources/dim_reduction"
 dim-reduction:
   folder: "dim_reduction"
-  threshold: 100
-  n-neighbors: 10
-  min-dist: 0
-  n-components: 2
-  metric: 'cosine'
+  umap-parameters:
+    n-neighbors: 10
+    min-dist: 0
+    n-components: 2
+    metric: 'cosine'
