--- a/config/backend.yml
+++ b/config/backend.yml
@@ -3,8 +3,8 @@ upload-buffer-size: 16384
 temp-folder: "xrf_explorer/server/temp"
 dim-reduction:
   folder: "dim_reduction"
-  threshold: 100
-  n-neighbors: 10
-  min-dist: 0
-  n-components: 2
-  metric: 'cosine'
+  umap-parameters:
+    n-neighbors: 10
+    min-dist: 0
+    n-components: 2
+    metric: 'cosine'
