Fixed folder, but for some reason it cannot find the right folder on the server anymore

--- a/config/backend.yml
+++ b/config/backend.yml
@@ -2,7 +2,7 @@ uploads-folder: "xrf_explorer/server/temp"
 upload-buffer-size: 16384
 temp-folder: "xrf_explorer/server/temp"
 dim-reduction:
-  folder: "dim_reduction"
+  folder: "xrf_explorer/server/temp/dim_reduction"
   umap-parameters:
     n-neighbors: 10
     min-dist: 0
