--- a/xrf_explorer/client/.eslintrc
+++ b/xrf_explorer/client/.eslintrc
@@ -20,6 +20,7 @@
     "vue/multi-word-component-names": "off",
     "vue/require-default-prop": "off",
     "vue/script-setup-uses-vars": "error",
+    "vue/no-reserved-component-names": "off",
     "vue/no-v-for-template-key-on-child": "warn",
     "vue/block-lang": [
       "error",
