--- a/.github/workflows/comments-to-lines-ratio.yml
+++ b/.github/workflows/comments-to-lines-ratio.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
   cloc:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Check-out repo.
         uses: actions/checkout@v4
