--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -32,6 +32,7 @@
     "vue": "^3.4.21",
     "vue-draggable-next": "^2.2.1",
     "vue-sonner": "^1.1.2",
+    "vue3-colorpicker": "^2.3.0",
     "zod": "^3.23.4"
   },
   "devDependencies": {
