Added default color segmentation parameters in backend.yml config

--- a/config/backend.yml
+++ b/config/backend.yml
@@ -8,3 +8,9 @@ dim-reduction:
     min-dist: 0
     n-components: 2
     metric: "cosine"
+color-segmentation:
+  folder: "xrf_explorer/server/temp/color_segmentation"
+  k-means-parameters:
+    k: 20
+    nr-attempts: 10
+    image-size: 500
