--- a/config/backend.yml
+++ b/config/backend.yml
@@ -1,5 +1,7 @@
 temp-folder: "xrf_explorer/server/temp"
 uploads-folder: "xrf_explorer/server/data"
+bind-address: 127.0.0.1
+port: 8001
 upload-buffer-size: 16384
 dim-reduction:
   folder: "xrf_explorer/server/temp/dim_reduction"
