--- a/tests/resources/configs/dim-reduction-no-embedding.yml
+++ b/tests/resources/configs/dim-reduction-no-embedding.yml
@@ -1,7 +1,8 @@
 uploads-folder: "tests/resources/dim_reduction"
 temp-folder: "tests/resources/dim_reduction"
+generated-folder: "tests/resources/dim_reduction"
 dim-reduction:
-  folder: "tests/resources/dim_reduction/no_embedding"
+  folder-name: "no_embedding"
   umap-parameters:
     n-neighbors: 10
     min-dist: 0
