--- a/config/backend.yml
+++ b/config/backend.yml
@@ -1,8 +1,9 @@
 temp-folder: "xrf_explorer/server/temp"
 uploads-folder: "xrf_explorer/server/data"
+generated-folder: "xrf_explorer/server/temp"
 upload-buffer-size: 16384
 dim-reduction:
-  folder: "xrf_explorer/server/temp/dim_reduction"
+  folder-name: "dim_reduction"
   umap-parameters:
     n-neighbors: 10
     min-dist: 0
