--- a/tests/resources/configs/dim-reduction-embedding-present.yml
+++ b/tests/resources/configs/dim-reduction-embedding-present.yml
@@ -3,6 +3,7 @@ temp-folder: "tests/resources/dim_reduction"
 generated-folder: "tests/resources/dim_reduction"
 dim-reduction:
   folder-name: "embedding_present"
+  max-samples: 100
   umap-parameters:
     n-neighbors: 10
     min-dist: 0
