--- a/xrf_explorer/client/.eslintrc
+++ b/xrf_explorer/client/.eslintrc
@@ -63,6 +63,12 @@
         "contexts": ["TSInterfaceDeclaration", "TSTypeAliasDeclaration", "TSEnumDeclaration", "TSPropertySignature"],
       },
     ],
+    "tailwindcss/no-custom-classname": [
+      "warn",
+      {
+        "whitelist": ["custom\\-.*"],
+      },
+    ],
     "jsdoc/require-description": "warn",
     "jsdoc/require-description-complete-sentence": "warn",
     "jsdoc/no-bad-blocks": "warn",
