Fixed generated folder and new routes

--- a/tests/resources/configs/dim-reduction-embedding-present.yml
+++ b/tests/resources/configs/dim-reduction-embedding-present.yml
@@ -1,6 +1,6 @@
 uploads-folder: "tests/resources/dim_reduction"
 temp-folder: "tests/resources/dim_reduction"
-generated-folder: "tests/resources/dim_reduction"
+generated-folder-name: "generated"
 dim-reduction:
   folder-name: "embedding_present"
   max-samples: 100
