--- a/config/backend.yml
+++ b/config/backend.yml
@@ -1,6 +1,6 @@
 temp-folder: "xrf_explorer/server/temp"
 uploads-folder: "xrf_explorer/server/data"
-generated-folder: "xrf_explorer/server/temp"
+generated-folder-name: "generated"
 bind-address: 127.0.0.1
 port: 8001
 upload-buffer-size: 16384
