Changed cache folder for CS and rewrote code to use register_image_to_datacube()

--- a/config/backend.yml
+++ b/config/backend.yml
@@ -14,6 +14,7 @@ dim-reduction:
     metric: "cosine"
 color-segmentation:
   folder: "generated/color_segmentation"
+  registered-image: "registered_rgb.tif"
   k-means-parameters:
     k: 10
     nr-attempts: 10
