--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -26,6 +26,7 @@
     "file-saver": "^2.0.5",
     "lucide-vue-next": "^0.378.0",
     "mathjs": "^12.4.2",
+    "pngjs": "^7.0.0",
     "radix-vue": "^1.7.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
