--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@stylistic/eslint-plugin": "^2.1.0",
     "@types/d3": "^7.4.3",
+    "@types/pngjs": "^6.0.5",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20.12.7",
     "@types/three": "^0.164.0",
