--- a/xrf_explorer/client/package.json
+++ b/xrf_explorer/client/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-vue": "^9.26.0",
+    "jest": "^29.7.0",
     "jsdoc": "^4.0.3",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
